修复使用`fixed-size List`改动List的bug